several small fixes

--- a/extract_metadata_from_lif.ipynb
+++ b/extract_metadata_from_lif.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_1.5hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_3hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_0.5hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_2hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_3.5hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_1hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_0hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_4hchase.lif',\n",
+       " '/scratch/hoerl/replication-data/raw/fixed cells/250216_240216_J1(15minEdU(488)_PCNA(594)_2.5hchase.lif']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "files = glob.glob('C:/Users/david/Desktop/replication-data/raw/fixed cells/*.lif')\n",
     "result = defaultdict(dict)\n",
