--- a/replication_cluster_feature_importance.ipynb
+++ b/replication_cluster_feature_importance.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
-    "from sklearn.preprocessing.label import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.impute import SimpleImputer\n",
@@ -20,7 +20,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.preprocessing import scale"
+    "from sklearn.preprocessing import scale\n",
+    "\n",
+    "plt.rcParams['pdf.fonttype'] = 42"
    ]
   },
   {
@@ -29,10 +31,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_agg = pd.read_csv('C:/Users/david/Desktop/replication-data/df_agg.csv')\n",
-    "df_agg.head()\n",
+    "# load data\n",
+    "df_agg = pd.read_csv('/scratch/hoerl/replication-data/df_agg.csv')\n",
+    "df_agg = df_agg.sort_values(by=['stage'])\n",
+    "df_agg.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Alternative:** aggregate raw features (+ volume threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_edu = pd.read_csv('/scratch/hoerl/replication-data/df_edu.csv', index_col=0)\n",
+    "df_edu = df_edu[df_edu.edu_area > 200] # should correspond roughly to PSF size on confocal\n",
     "\n",
+    "# make DataFrame\n",
+    "def quantile75(d):\n",
+    "    return np.quantile(d, 0.75)\n",
+    "def quantile25(d):\n",
+    "    return np.quantile(d, 0.25)\n",
     "\n",
+    "agg_funs = ['median', 'count', 'std']\n",
+    "#agg_funs = ['median', 'mean', 'count', 'std', quantile25, quantile75]\n",
+    "\n",
+    "# calculate median, stddev, count for all features per cell\n",
+    "df_agg_edu = df_edu.groupby(['file', 'stage', 'chase_dur']).agg(agg_funs)\n",
+    "df_agg_edu.columns = df_agg_edu.columns.to_flat_index() # collapse multi-index\n",
+    "df_agg_edu.columns = ['_'.join(c) for c in df_agg_edu.columns]\n",
+    "df_agg_edu['edu_num_sites'] = df_agg_edu['edu_area_count'] # copy one count column, call it num_sites\n",
+    "df_agg_edu = df_agg_edu.drop([c for c in df_agg_edu.columns if c.endswith('count')], 1) # remove all redundant count columns\n",
+    "df_agg = df_agg_edu.reset_index()\n",
+    "df_agg = df_agg.sort_values(by=['stage'])\n",
+    "df_agg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# only use one label features for now\n",
     "df_agg = df_agg.iloc[:, [not c.startswith('pcna') for c in df_agg.columns]]\n",
     "df_agg = df_agg.iloc[:, [not 'edu_pcna' in c for c in df_agg.columns]]\n",
@@ -50,8 +96,8 @@
     "# ignore \"filled area\" columns (is the same as area except for 1/2 samples)\n",
     "df_agg = df_agg.iloc[:, [not 'filled_area' in c for c in df_agg.columns]]\n",
     "\n",
-    "# ignore \"major/minor axis\" columns\n",
-    "#df_agg = df_agg.iloc[:, [not 'axis' in c for c in df_agg.columns]]\n",
+    "# ignore \"euler number\" columns\n",
+    "df_agg = df_agg.iloc[:, [not 'euler' in c for c in df_agg.columns]]\n",
     "\n",
     "# ignore \"equivalent diameter\" columns\n",
     "#df_agg = df_agg.iloc[:, [not 'diameter' in c for c in df_agg.columns]]\n",
@@ -64,7 +110,7 @@
     "# for nn in nn_to_ignore:\n",
     "#     df_agg = df_agg.iloc[:, [not nn in c for c in df_agg.columns]]\n",
     "    \n",
-    "df_agg.columns"
+    "len(df_agg.columns), df_agg.columns"
    ]
   },
   {
@@ -73,6 +119,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# modified from calmutils.localization.util\n",
+    "\n",
+    "def get_ellipse_params(cov, n_sdev=1):\n",
+    "    \"\"\"\n",
+    "    get ellipse parameters for matplotlib for an ellipse representing the\n",
+    "    full-width-at-quantile of a 2d-Gaussian\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    cov: np-array\n",
+    "        2x2 covaraince matrix\n",
+    "    n_sdev: float\n",
+    "        number of s.d.s at which to draw ellipse\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    a: float\n",
+    "        horizontal axis length\n",
+    "    b: float\n",
+    "        vertical axis length\n",
+    "    alpha: float \\in (-180, 180)\n",
+    "        counterclockwise rotation of the ellipse in degrees\n",
+    "    \"\"\"\n",
+    "    w, v = np.linalg.eig(cov)\n",
+    "    lens = [np.sqrt(wi) * 2 * n_sdev for wi in w]\n",
+    "    a = _deg_angle(v[:, 0] * lens[0])\n",
+    "    return (lens[0], lens[1], a)\n",
+    "\n",
+    "\n",
+    "def _deg_angle(a):\n",
+    "    \"\"\"\n",
+    "    angle between vector a and x-axis, in degrees\n",
+    "    \"\"\"\n",
+    "    return 180 * np.arctan2(a[1], a[0]) / np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.patches import Ellipse\n",
+    "\n",
     "xs = df_agg.iloc[:,2:].values\n",
     "ys = df_agg['stage'].values\n",
     "feature_names = np.array(df_agg.iloc[:,2:].columns)\n",
@@ -84,13 +174,31 @@
     "xs_imputed = SimpleImputer().fit_transform(xs)\n",
     "xs_imputed = scale(xs_imputed)\n",
     "\n",
-    "ts = TSNE(perplexity=20).fit_transform(xs_imputed)\n",
-    "plt.figure(figsize=(7,7))\n",
-    "sns.scatterplot(ts.T[0], ts.T[1], hue = ys)\n",
+    "# circular color palette\n",
+    "cmap = sns.color_palette(\"husl\", 7)[0:5]\n",
     "\n",
-    "plt.xlabel('Component 1')\n",
-    "plt.ylabel('Component 2')\n",
-    "plt.title('t-SNE visualization')"
+    "\n",
+    "# how often to repeat tSNE\n",
+    "n_replicates = 1\n",
+    "for r in np.random.randint(0, 25000, n_replicates):\n",
+    "    ts = TSNE(n_iter=2000, perplexity=50, random_state=r).fit_transform(xs_imputed)\n",
+    "    #ts = PCA().fit_transform(xs_imputed)\n",
+    "    plt.figure(figsize=(7,7))\n",
+    "\n",
+    "    sns.scatterplot(ts.T[0], ts.T[1], hue = ys, s=100, palette=cmap)\n",
+    "\n",
+    "    plt.xlabel('Component 1')\n",
+    "    plt.ylabel('Component 2')\n",
+    "    plt.title('t-SNE visualization')\n",
+    "\n",
+    "    # draw ellipses around each class\n",
+    "    for i, yi in enumerate(np.unique(ys_num)):\n",
+    "        t = ts[ys_num==yi]\n",
+    "        a, b, alpha = get_ellipse_params(np.cov(t, rowvar=False), 1.5)\n",
+    "        ell = Ellipse(np.mean(t, axis=0), a, b, alpha, fill=None, color=cmap[i], ls='dashed', lw=2)\n",
+    "        plt.gca().add_artist(ell)\n",
+    "\n",
+    "#     plt.savefig('/scratch/hoerl/replication-data/tsne_replicates/df_agg_tsne{}.pdf'.format(r))"
    ]
   },
   {
@@ -99,6 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train classifier on features\n",
+    "\n",
     "#clf = RandomForestClassifier(n_estimators=10)\n",
     "clf = LogisticRegression()\n",
     "#clf = DecisionTreeClassifier()\n",
@@ -117,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "following [https://scikit-learn.org/stable/auto_examples/inspection/plot_permutation_importance_multicollinear.html#sphx-glr-auto-examples-inspection-plot-permutation-importance-multicollinear-py]"
+    "get feature importance following [https://scikit-learn.org/stable/auto_examples/inspection/plot_permutation_importance_multicollinear.html#sphx-glr-auto-examples-inspection-plot-permutation-importance-multicollinear-py]"
    ]
   },
   {
@@ -126,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X_train, X_test, y_train, y_test = train_test_split(xs_imputed, ys_num)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(xs_imputed, ys_num)\n",
     "\n",
     "clf = LogisticRegression()\n",
     "clf.fit(xs_imputed, ys_num)\n",
@@ -149,15 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(reversed(feature_names[perm_sorted_idx]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# boxplot some features\n",
+    "\n",
     "plt.figure(figsize=(6,4))\n",
     "plt.title('Distance from border')\n",
     "sns.boxplot(data=df_agg.sort_values(by=['stage']), x='stage', y='edu_edt_mean_median')\n",
@@ -178,6 +281,24 @@
     "plt.title('Size of EdU sites')\n",
     "sns.boxplot(data=df_agg.sort_values(by=['stage']), x='stage', y='edu_area_median')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# boxplot all features\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter('ignore') # ignore \"too many plots\" warning\n",
+    "    for feat in list(reversed(feature_names[perm_sorted_idx])):\n",
+    "        plt.figure(figsize=(6,4))\n",
+    "        plt.title(feat)\n",
+    "        sns.boxplot(data=df_agg.sort_values(by=['stage']), x='stage', y=feat, notch=True)"
+   ]
   }
  ],
  "metadata": {
@@ -196,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
