--- a/replication_feature_extraction.ipynb
+++ b/replication_feature_extraction.ipynb
@@ -12,6 +12,7 @@
     "import json\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "import pathlib as path\n",
+    "import os\n",
     "\n",
     "import pandas as pd\n",
     "from scipy.spatial import KDTree\n",
@@ -23,7 +24,7 @@
     "\n",
     "import h5py as h5\n",
     "from skimage.morphology import watershed, dilation, ball, closing, opening\n",
-    "from skimage.external.tifffile import imread\n",
+    "from skimage.external.tifffile import imread, imsave\n",
     "from skimage.measure import regionprops\n",
     "from scipy import ndimage as ndi\n",
     "from matplotlib import pyplot as plt"
@@ -33,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Replication Data Analysis"
+    "# Replication Data Feature Extraction"
    ]
   },
   {
@@ -43,7 +44,7 @@
    "outputs": [],
    "source": [
     "# get minimal size of all files\n",
-    "metadata_files = glob.glob('C:/Users/david/Desktop/replication-data/fixed_single_channel2/metadata*.json')\n",
+    "metadata_files = glob.glob('/scratch/hoerl/replication-data/fixed_single_channel2/metadata*.json')\n",
     "\n",
     "sizes = []\n",
     "for file in metadata_files:\n",
@@ -65,8 +66,12 @@
     "\n",
     "replication_overlap_thresh = 0.5 # how much of a replication site has to be inside the nuclear mask to keep it\n",
     "\n",
-    "def segment(marker_file, plot=False):\n",
+    "watershed_save_dir = '/scratch/hoerl/replication-data/watersheds/'\n",
+    "# set to None to not save watersheds\n",
+    "# watershed_save_dir = None\n",
     "\n",
+    "def segment(marker_file, plot=False, isotropic_watershed=False, return_intermediate=False):\n",
+    "    \n",
     "    # get segmentation/raw/metadata files corresponding to marker file\n",
     "    prob_file = marker_file.replace('markers', 'classification_dapi')\n",
     "    prob_file_edu = marker_file.replace('markers', 'classification_edu').replace('dapi', 'edu')\n",
@@ -83,7 +88,6 @@
     "        meta = json.load(fd)\n",
     "    size = np.array([meta['voxel_size_z'], meta['voxel_size_y'], meta['voxel_size_x']])\n",
     "    zoom_factor = size/np.min(min_size)\n",
-    "\n",
     "\n",
     "    with h5.File(marker_file, 'r') as fd:\n",
     "        markers = fd['markers'][...].squeeze()\n",
@@ -105,12 +109,12 @@
     "    # introduce background marker 1: areas with high bg prob\n",
     "    # all other labels += 1\n",
     "    markers = ndi.label(markers)[0]\n",
-    "    markers[markers>0] += 1\n",
-    "    markers[probs_bg > 0.99] = 1 # TODO: make parameter?\n",
+    "    markers[markers>0] += 1 # have foreground markers start at 2\n",
+    "    markers[probs_bg > 0.99] = 1 # background marker = 1\n",
     "\n",
     "    # watershed from markers -> dapi segmentation\n",
-    "    segmentation = watershed(probs, markers) #, compactness=0.0002) # TODO: compactness necessary?\n",
-    "    segmentation[segmentation==1] = 0\n",
+    "    segmentation = watershed(probs, markers) #, compactness=0.0002) # compactness not really necessary?\n",
+    "    segmentation[segmentation==1] = 0 # set background back to 0\n",
     "    \n",
     "    # get the most central object\n",
     "    center = np.array(segmentation.shape).astype(np.float)/2\n",
@@ -127,11 +131,46 @@
     "    seg_edu = (probs_edu > 0.5).astype(np.int)\n",
     "    seg_pcna = (probs_pcna > 0.5).astype(np.int)\n",
     "    \n",
+    "    \n",
+    "    # return zoomed intermediate images for visualization\n",
+    "    if return_intermediate:\n",
+    "        seg_dapi_all = ndi.zoom(segmentation, zoom_factor, order=0)\n",
+    "        seg_edu_sem = ndi.zoom(seg_edu, zoom_factor, order=0)\n",
+    "        markers = ndi.zoom(markers, zoom_factor, order=0)\n",
+    "        probs_border = ndi.zoom(probs, zoom_factor)\n",
+    "        probs_bg = ndi.zoom(probs_bg, zoom_factor)\n",
+    "        \n",
+    "    # upscale raw images to maximum isotropic resolution\n",
+    "    # NB: we zoom segmentations before watershed for isotropic distances\n",
+    "    if isotropic_watershed:\n",
+    "        raw = ndi.zoom(raw, zoom_factor)\n",
+    "        raw_edu = ndi.zoom(raw_edu, zoom_factor)\n",
+    "        raw_pcna = ndi.zoom(raw_pcna, zoom_factor)\n",
+    "        seg_dapi = ndi.zoom(seg_dapi, zoom_factor, order=0)\n",
+    "        seg_edu = ndi.zoom(seg_edu, zoom_factor, order=0)\n",
+    "        seg_pcna = ndi.zoom(seg_pcna, zoom_factor, order=0)\n",
+    "        \n",
+    "\n",
+    "    # markers edu/pcna: local maxima in smoothed image\n",
+    "    # NB: did not perform better than just watershed on EDT\n",
+    "#     markers_edu = ndi.gaussian_filter(raw_edu.astype(np.float), (1,1,1))\n",
+    "#     markers_edu = (markers_edu >= ndi.maximum_filter(markers_edu, 3)) * seg_edu\n",
+    "#     markers_edu, _ = ndi.label(markers_edu)\n",
+    "#     markers_pcna = ndi.gaussian_filter(raw_pcna.astype(np.float), (1,1,1))\n",
+    "#     markers_pcna = (markers_pcna >= ndi.maximum_filter(markers_pcna, 3)) * seg_pcna\n",
+    "#     markers_pcna, _ = ndi.label(markers_pcna)\n",
+    "    \n",
     "    # watershed on edt to separate replication sites\n",
-    "    #seg_edu *= watershed(-ndi.morphology.distance_transform_edt(seg_edu))\n",
     "    seg_edu *= watershed(-ndi.gaussian_filter(ndi.morphology.distance_transform_edt(seg_edu), (0.5,1,1)))\n",
-    "    #seg_pcna *= watershed(-ndi.morphology.distance_transform_edt(seg_pcna))\n",
+    "#     seg_edu *= watershed(-ndi.morphology.distance_transform_edt(seg_edu), markers_edu)\n",
+    "\n",
     "    seg_pcna *= watershed(-ndi.gaussian_filter(ndi.morphology.distance_transform_edt(seg_pcna), (0.5,1,1)))\n",
+    "#     seg_pcna *= watershed(-ndi.morphology.distance_transform_edt(seg_pcna), markers_pcna)\n",
+    "    \n",
+    "    # save EdU watershed image for manual inspection\n",
+    "    if not watershed_save_dir is None:\n",
+    "        imsave(os.path.join(watershed_save_dir, path.Path(marker_file.replace('markers', '').replace('.h5', '.tif').replace('dapi', 'edu')).name),\n",
+    "               np.expand_dims(seg_edu, 1).astype(np.uint16), imagej=True)\n",
     "    \n",
     "    # remove replication objects not within nuclear mask\n",
     "    for rprop in regionprops(seg_edu):\n",
@@ -165,14 +204,18 @@
     "        fig.tight_layout()\n",
     "\n",
     "    \n",
-    "    # upscale everything to maximum isotropic resolution\n",
-    "    raw = ndi.zoom(raw, zoom_factor)\n",
-    "    raw_edu = ndi.zoom(raw_edu, zoom_factor)\n",
-    "    raw_pcna = ndi.zoom(raw_pcna, zoom_factor)\n",
-    "    seg_dapi = ndi.zoom(seg_dapi, zoom_factor, order=0)\n",
-    "    seg_edu = ndi.zoom(seg_edu, zoom_factor, order=0)\n",
-    "    seg_pcna = ndi.zoom(seg_pcna, zoom_factor, order=0)\n",
+    "    # upscale raw images to maximum isotropic resolution\n",
+    "    # NB: doing this at the end is faster, but segmentations might not be as nice\n",
+    "    if not isotropic_watershed:\n",
+    "        raw = ndi.zoom(raw, zoom_factor, order)\n",
+    "        raw_edu = ndi.zoom(raw_edu, zoom_factor)\n",
+    "        raw_pcna = ndi.zoom(raw_pcna, zoom_factor)\n",
+    "        seg_dapi = ndi.zoom(seg_dapi, zoom_factor, order=0)\n",
+    "        seg_edu = ndi.zoom(seg_edu, zoom_factor, order=0)\n",
+    "        seg_pcna = ndi.zoom(seg_pcna, zoom_factor, order=0)\n",
     "    \n",
+    "    if return_intermediate:\n",
+    "        return raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna, seg_dapi_all, seg_edu_sem, markers, probs_border\n",
     "    return raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna"
    ]
   },
@@ -183,7 +226,7 @@
    "outputs": [],
    "source": [
     "# get files to process (marker files)\n",
-    "marker_dir = 'C:/Users/david/Desktop/replication-data/fixed_single_channel2/markers/'\n",
+    "marker_dir = '/scratch/hoerl/replication-data/fixed_single_channel2/markers/'\n",
     "marker_files = glob.glob(marker_dir + '*.h5')"
    ]
   },
@@ -193,22 +236,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test on one image with plot\n",
-    "#for marker_file in random.sample(marker_files, 1):\n",
-    "\n",
-    "_ = segment(marker_files[1], True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# process all multithreaded    \n",
-    "with ThreadPoolExecutor() as tpe:\n",
-    "    futures = [tpe.submit(segment, marker_file) for marker_file in marker_files]\n",
-    "    results = [f.result() for f in tqdm.tqdm(futures)]"
+    "#process all multithreaded    \n",
+    "with ThreadPoolExecutor(14) as tpe:\n",
+    "    futures = [tpe.submit(segment, marker_file, False, False) for marker_file in marker_files]\n",
+    "    results = [f.result() for f in tqdm.tqdm(futures)]\n",
+    "    \n",
+    "# results = [segment(marker_file, False, True) for marker_file in tqdm.tqdm(marker_files)]"
    ]
   },
   {
@@ -224,7 +257,7 @@
     "    chase_dur = float(path.Path(marker_file).name.replace('.h5', '').split('_')[2].replace('h', ''))\n",
     "    fname = path.Path(marker_file).name.replace('.h5', '')\n",
     "    \n",
-    "    # we need edt on dapi for dsitance from border\n",
+    "    # we need edt on dapi for distance from border\n",
     "    edt = ndi.morphology.distance_transform_edt(seg_dapi)\n",
     "    \n",
     "    # TODO: remove thin objects?\n",
@@ -378,27 +411,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate features on single image\n",
-    "\n",
-    "idx = 3\n",
-    "raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna = results[idx]\n",
-    "marker_file = marker_files[idx]\n",
-    "features_edu, features_pcna = get_features(raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna, marker_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# compute features for all images\n",
-    "# TODO: multithreading?\n",
+    "with ThreadPoolExecutor(14) as tpe:\n",
+    "    futures = [tpe.submit(get_features, *result, marker_file) for (result, marker_file) in zip(results, marker_files)]\n",
+    "    features = [f.result() for f in tqdm.tqdm(futures)]\n",
     "\n",
-    "features = []\n",
-    "for i, (result, marker_file) in enumerate(zip(results, marker_files)):\n",
-    "    features.append(get_features(*result, marker_file))\n",
-    "    print('processed {} of {}: {}'.format(i+1, len(marker_files), marker_file))"
+    "#features = []\n",
+    "# for i, (result, marker_file) in tqdm.tqdm(enumerate(zip(results, marker_files)), total=len(results)):\n",
+    "#     features.append(get_features(*result, marker_file))\n",
+    "#     #print('processed {} of {}: {}'.format(i+1, len(marker_files), marker_file))"
    ]
   },
   {
@@ -424,17 +445,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make DataFrame\n",
+    "# make aggregate DataFrame\n",
+    "\n",
+    "def quantile75(d):\n",
+    "    return np.quantile(d, 0.75)\n",
+    "def quantile25(d):\n",
+    "    return np.quantile(d, 0.25)\n",
+    "\n",
+    "agg_funs = ['median', 'count', 'std']\n",
+    "#agg_funs = ['median', 'mean', 'count', 'std', quantile25, quantile75]\n",
     "\n",
     "# calculate median, stddev, count for all features per cell\n",
-    "df_agg_edu = pd.DataFrame.from_dict(pool_features_edu).groupby(['file', 'stage', 'chase_dur']).agg(['median', 'count', 'std'])\n",
+    "df_edu = pd.DataFrame.from_dict(pool_features_edu)\n",
+    "\n",
+    "df_edu = df_edu[df_edu.edu_area > 200]\n",
+    "df_agg_edu = df_edu.groupby(['file', 'stage', 'chase_dur']).agg(agg_funs)\n",
     "df_agg_edu.columns = df_agg_edu.columns.to_flat_index() # collapse multi-index\n",
     "df_agg_edu.columns = ['_'.join(c) for c in df_agg_edu.columns]\n",
     "df_agg_edu['edu_num_sites'] = df_agg_edu['edu_area_count'] # copy one count column, call it num_sites\n",
     "df_agg_edu = df_agg_edu.drop([c for c in df_agg_edu.columns if c.endswith('count')], 1) # remove all redundant count columns\n",
     "\n",
     "# same for pcna\n",
-    "df_agg_pcna = pd.DataFrame.from_dict(pool_features_pcna).groupby(['file', 'stage', 'chase_dur']).agg(['median', 'count', 'std'])\n",
+    "df_pcna = pd.DataFrame.from_dict(pool_features_pcna)\n",
+    "df_pcna = df_pcna[df_pcna.pcna_area > 200]\n",
+    "df_agg_pcna = df_pcna.groupby(['file', 'stage', 'chase_dur']).agg(agg_funs)\n",
     "df_agg_pcna.columns = df_agg_pcna.columns.to_flat_index()\n",
     "df_agg_pcna.columns = ['_'.join(c) for c in df_agg_pcna.columns]\n",
     "df_agg_pcna['pcna_num_sites'] = df_agg_pcna['pcna_area_count']\n",
@@ -462,7 +496,119 @@
    "outputs": [],
    "source": [
     "# save\n",
-    "df_agg.to_csv('C:/Users/david/Desktop/replication-data/df_agg.csv')"
+    "df_agg.to_csv('/scratch/hoerl/replication-data/df_agg_sizefiltered200.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save non-aggregated Edu features\n",
+    "df_edu = pd.DataFrame.from_dict(pool_features_edu)\n",
+    "df_edu.to_csv('/scratch/hoerl/replication-data/df_edu.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot volume / distance distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams['pdf.fonttype'] = 42\n",
+    "\n",
+    "df_edu = pd.read_csv('/scratch/hoerl/replication-data/df_edu.csv', index_col=0)\n",
+    "df_edu = df_edu[df_edu.edu_area > 200] # should correspond roughly to PSF size on confocal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_edu[(df_edu.edu_area > 200) & (df_edu.edu_area < 20000)].hist('edu_area', by='stage', sharex=True, sharey=True, bins=100, figsize=(10,10), density=True)\n",
+    "plt.gcf().suptitle('Volume distributions of individual RFi by stage')\n",
+    "for ax in plt.gcf().get_axes():\n",
+    "    ax.set_xlabel('Volume (pixel^3)')\n",
+    "    ax.set_ylabel('density')\n",
+    "plt.gcf().tight_layout()\n",
+    "plt.savefig('/scratch/hoerl/replication-data/volume_dist.pdf')\n",
+    "\n",
+    "\n",
+    "df_edu[df_edu.edu_area > 200].hist('edu_edt_mean', by='stage', sharex=True, sharey=True, bins=100, figsize=(10,10), density=True)\n",
+    "plt.gcf().suptitle('Distance from periphery distributions of individual RFi by stage')\n",
+    "for ax in plt.gcf().get_axes():\n",
+    "    ax.set_xlabel('distance (pixels)')\n",
+    "    ax.set_ylabel('density')\n",
+    "plt.gcf().tight_layout()\n",
+    "plt.savefig('/scratch/hoerl/replication-data/distance_dist.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Segmentation/Feature extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test on one image with plot\n",
+    "#for marker_file in random.sample(marker_files, 1):\n",
+    "\n",
+    "_ = segment(marker_files[1], True, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# segment on one image with intermediate results\n",
+    "raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna, seg_dapi_all, seg_edu_sem, markers, probs_border = segment(marker_files[5], False, False, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot intermediate results\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.imshow(ndi.morphology.distance_transform_edt(seg_dapi[raw.shape[0]//2]), cmap='gray', interpolation='nearest')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.imshow(seg_edu[raw.shape[0]//2], cmap='jet', interpolation='nearest')\n",
+    "plt.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate features on single segmentation\n",
+    "idx = 3\n",
+    "raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna = results[idx]\n",
+    "marker_file = marker_files[idx]\n",
+    "features_edu, features_pcna = get_features(raw, raw_edu, raw_pcna, seg_dapi, seg_edu, seg_pcna, marker_file)"
    ]
   }
  ],
@@ -482,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
